Timothy Harris uptaded files

--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html>
-
-  <head>
-    <title>NodeJS Starter Application</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="stylesheets/style.css">
-  </head>
-
-  <body>
-    <table>
-      <tr>
-        <td style= "width:30%;">
-          <img class = "newappIcon" src="images/newapp-icon.png">
-        </td>
-        <td>
-          <h1 id="message">Hello World!</h1>
-          <p class='description'></p> Thanks for creating a <span class = "blue">NodeJS Starter Application</span>.
-        </td>
-      </tr>
-    </table>
-  </body>
-
+<html>
+  <head lang="en">
+  <meta charset="UTF-8">
+  <script language="JavaScript">
+    function showInput() {
+        document.getElementById('display').innerHTML = 
+                    document.getElementById("user_input").value;
+    }
+  </script>
+<body>
+<form action="https://orangeriver.mybluemix.net/process_get" method="GET">
+Latitude: <input type="text" name="latitude"> <br>
+Longitude: <input type="text" name="longitude"> <br>
+Start Date: <input type="text" name="startDate"> <br>
+End Date: <input type="text" name="endDate"> <br>
+<input type="submit" value="Submit">
+</form>
+  <p><span id='display'></span></p>
+</body>
 </html>
