--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     }
   </script>
 <body>
-<form action="https://orangeriver.mybluemix.net/process_get" method="GET">
+<form action="https://IntelligentRiverTH.mybluemix.net/process_get" method="GET">
 Latitude: <input type="text" name="latitude"> <br>
 Longitude: <input type="text" name="longitude"> <br>
 Start Date: <input type="text" name="startDate"> <br>
