modified the text labels to show how to input date

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
 <form action="https://IntelligentRiverTH.mybluemix.net/process_get" method="GET">
 Latitude: <input type="text" name="latitude"> <br>
 Longitude: <input type="text" name="longitude"> <br>
-Start Date: <input type="text" name="startDate"> <br>
-End Date: <input type="text" name="endDate"> <br>
+Start Date (mm/dd/yyyy): <input type="text" name="startDate"> <br>
+End Date (mm/dd/yyyy): <input type="text" name="endDate"> <br>
 <input type="submit" value="Submit">
 </form>
   <p><span id='display'></span></p>
